# pybind11-example

./: .appveyor.yml  CMakeLists.txt  README.md  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  conda.yml  pip.yml  wheels.yml
conda.recipe/: meta.yaml
docs/: Makefile  cmake_example.rst  conf.py  index.rst  make.bat
src/: main.cpp  ops.h
tests/: test_basic.py
